<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mede8erController</string>
    <string name="menu_settings">Settings</string>
    <string name="search">Search</string>
    <string name="movies_tab">Movies</string>
    <string name="music_tab">Music</string>
    <string name="playlist_tab">Playlist</string>
    <string name="scan_mede8er">Rescan Media Player</string>

    <string name="first_time_run">First time run</string>
    <string name="first_time_run_message">This is the first time the app is running. Do you want to scan the media player?</string>
    <string name="no_data">No data</string>
    <string name="no_data_message">The app contains no data. You can scan the media player using the menu.</string>
    <string name="mediaplayer_info">Mediaplayer Info</string>
    <string name="no_mede8er">No connection</string>
    <string name="no_mede8er_message">No mede8er was found on the wifi network. Please check that mede8er is swicthed on and connected to the network.</string>
    <string name="nas_not_found">No jukeboxes</string>
    <string name="nas_not_found_message">No jukeboxes were found on the mede8er. Maybe a NAS is not connected?</string>
    <string name="network_discovery">Network discovery</string>
    <string name="network_discovery_message">Searching mede8er on wifi network..</string>
    <string name="info_title">Mede8er Player Info</string>
    <string name="clear_cache">Clear cache</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_menu">Sort menu</string>
</resources>
