<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_search"
            android:title="@string/search"
            android:icon="@android:drawable/ic_menu_search"
            android:showAsAction="always"
            android:actionViewClass="android.widget.SearchView"/>

    <item
            android:icon="@drawable/sort"
            android:showAsAction="ifRoom"
            android:title="@string/sort_menu">
        <menu>
            <item
                    android:id="@+id/menuSortByTitle"
                    android:title="@string/sort_by_title"/>
            <item
                    android:id="@+id/menuSortByDate"
                    android:title="@string/sort_by_date"/>
        </menu>
    </item>

    <item
            android:id="@+id/menu_reset"
            android:title="@string/clear_cache"
            android:orderInCategory="10"
            android:showAsAction="never"/>

    <item
            android:id="@+id/menu_scan_mediaplayer"
            android:title="@string/scan_mede8er"
            android:orderInCategory="50"
            android:showAsAction="never"/>
    <item
            android:id="@+id/menu_mediaplayer_info"
            android:title="@string/mediaplayer_info"
            android:orderInCategory="60"
            android:showAsAction="never"/>
    <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            android:orderInCategory="100"
            android:showAsAction="never"/>

</menu>